# roboconDiffBot

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: dockerBuild.yml  lint.yaml
docker/: dockerfile.dev  packages.list  rosPkgs.list  supervisord.conf
docker/conf.d/: fluxbox.conf  lxpanel.conf  novnc.conf  openbox.conf  pcmanfm.conf  websockify.conf  x11vnc.conf  xterm.conf  xvfb.conf
docker/scripts/: entrypoint.sh
docs/: development.md  dockerInstallation.md  hardware.md  software.md  usage.md
gazebo_assets/: CMakeLists.txt  package.xml
gazebo_assets/src/gz_assets/bridges/: bridges.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: rviz_config.rviz
robot_description/launch/: description.launch.py  robot_rviz.launch.py
robot_description/urdf/: properties.urdf.xacro  robot.urdf.xacro  robot_core.xacro  robot_core2.xacro
robot_description/urdf/components/: gazebo_control.xacro  gazebo_materials.xacro  gazebo_physics.xacro
robot_description/urdf/meshes/: leftwheel1.stl
robot_simulator/: CMakeLists.txt  LICENSE  README.md  package.xml
robot_simulator/config/: ros_gz_bridge.yaml
robot_simulator/launch/: gazebo.launch.py  ros_gz_bridge.launch.py  ros_ign_bridge.launch.py  spawn.launch.py
robot_worlds/: CMakeLists.txt  package.xml
robot_worlds/models/: gamefield_2023.config  gamefield_2023.sdf
robot_worlds/params/: spawn_robot.yml
robot_worlds/worlds/: robocon.world
